--- a/bankjoy.css
+++ b/bankjoy.css
@@ -14,30 +14,35 @@ body {
 }
 
 #overlay {
-  background-color: #565D76;
+  background-color: #565E7D;
   width: 100%;
   height: 100%;
   margin: 0px;
   top: 0px;
   left: 0px;
-  opacity: .85;
   position: absolute;
+  opacity: .85;
+}
+
+#overlay:last-of-type {
+  opacity: .85;
 }
 
 .content {
   width: 80%;
-  margin: 0px auto 0px auto;
+  margin: 100px auto 0px auto;
   position: relative;
+  opacity: 1;
 }
 
 #company {
-  margin: 50px auto 0px auto;
+  margin: 40px auto 0px auto;
 }
 
 #logo {
   opacity: 1;
   width: 24%;
-  margin: 100px auto 0px auto;
+  margin: 50px auto 0px auto;
   display: block;
 }
 
@@ -54,7 +59,7 @@ h1 {
   margin: 10px auto;
 }
 
-#action-container{
+#action-container {
   margin: 12px auto;
 }
 
@@ -67,6 +72,45 @@ h1 {
   font-size: .9em;
 }
 
-#tagline-container{
+#tagline-container {
   margin: 35px auto;
+}
+
+.nav-contact {
+  width: 40%;
+  text-align: right;
+  margin: 20px 10px 0px 700px;
+}
+
+.contact {
+display: inline-block;
+padding: 20px 7px 0px 7px;
+}
+
+#phone {
+  text-decoration: none;
+  font-family: Source Sans Pro;
+  color: #FFFFFF;
+  font-size: 1.07em;
+  font-weight: 200;
+}
+
+#phone:hover {
+  color: #5373DA;
+}
+
+#email {
+  text-decoration: none;
+  font-family: Source Sans Pro;
+  color: #FFFFFF;
+  font-size: 1.07em;
+  font-weight: 200;
+}
+
+#email:hover {
+  color: #5373DA;
+}
+
+span {
+  padding: 8px;
 }
