--- a/bankjoy.css
+++ b/bankjoy.css
@@ -6,7 +6,7 @@ body {
   background: url(http://i.imgur.com/a3Vubxj.png) no-repeat center top fixed;
   background-size: cover;
   width: 100%;
-  height: 1255px;
+  height: 100%vh;
   margin: 0px;
   top: 0px;
   left: 0px;
@@ -33,6 +33,7 @@ body {
   margin: 100px auto 0px auto;
   position: relative;
   opacity: 1;
+  height: 100%;
 }
 
 #company {
@@ -44,11 +45,12 @@ body {
   width: 24%;
   margin: 50px auto 0px auto;
   display: block;
+  min-width: 240px;
 }
 
 #tagline {
   font-size: 3.8em;
-  max-font-size: 4em;
+  max-width: 900px;
   color: #FFFFFF;
   margin: 0 auto;
   text-align: center;
@@ -83,8 +85,8 @@ h1 {
 }
 
 .contact {
-display: inline-block;
-padding: 20px 7px 0px 7px;
+  display: inline-block;
+  padding: 20px 7px 0px 7px;
 }
 
 #phone {
@@ -163,4 +165,75 @@ span {
   text-decoration: none;
   color: #FFFFFF;
   margin: 0px auto 0px auto;
+}
+
+.marketing-container {
+  width: 100%;
+  display: inline-block;
+  height: 800px;
+  margin-top: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+  float: both;
+}
+
+.phones {
+  width: 700px;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+#center-phone {
+  top: 0px;
+  margin: 0px auto;
+  width: 330px;
+  position: absolute;
+  z-index: 3;
+  left: 0px;
+  right: 0px;
+}
+
+#left-phone {
+  width: 310px;
+  left: 23%;
+  transform: translateX(-68%);
+  margin-top: 50px;
+  z-index: 1;
+  position: absolute;
+}
+
+#right-phone {
+  width: 310px;
+  left: 65%;
+  margin-top: 50px;
+  z-index: 1;
+  position: absolute;
+}
+
+#shadow-left {
+  box-shadow: -40px 0px 100px -2px black;
+  left: 28%;
+  top: 50px;
+  z-index: 2;
+  width: 100px;
+  height: 600px;
+  margin: 0 auto;
+  opacity: .6;
+  position: absolute;
+}
+
+#shadow-right {
+  box-shadow: 40px 0px 100px -2px black;
+  left: 58%;
+  top: 50px;
+  z-index: 2;
+  width: 100px;
+  height: 600px;
+  margin: 0 auto;
+  opacity: .6;
+  position: absolute;
 }
