Changed CSS syntax to match style guide, #12.

--- a/default.css
+++ b/default.css
@@ -1,25 +1,25 @@
 body {
   font-family: "Source Sans Pro", sans-serif;
-  }
+}
 
 #background-image {
   background: url(http://i.imgur.com/a3Vubxj.png) no-repeat center top fixed;
   background-size: cover;
   width: 100%;
-  height: 100%vh;
-  margin: 0px;
-  top: 0px;
-  left: 0px;
+  height: 100%;
+  margin: 0;
+  top: 0;
+  left: 0;
   position: absolute;
 }
 
 #overlay {
-  background-color: #565E7D;
+  background-color: #565e7d;
   width: 100%;
   height: 100%;
-  margin: 0px;
-  top: 0px;
-  left: 0px;
+  margin: 0;
+  top: 0;
+  left: 0;
   position: absolute;
   opacity: .85;
 }
@@ -30,20 +30,20 @@ body {
 
 .content {
   width: 80%;
-  margin: 100px auto 0px auto;
+  margin: 100px auto 0;
   position: relative;
   opacity: 1;
   height: 100%;
 }
 
 #company {
-  margin: 40px auto 0px auto;
+  margin: 40px auto 0;
 }
 
 #logo {
   opacity: 1;
   width: 24%;
-  margin: 50px auto 0px auto;
+  margin: 50px auto 0;
   display: block;
   min-width: 240px;
 }
@@ -51,7 +51,7 @@ body {
 #tagline {
   font-size: 3.8em;
   max-width: 900px;
-  color: #FFFFFF;
+  color: #fff;
   margin: 0 auto;
   text-align: center;
   font-weight: 100;
@@ -66,7 +66,7 @@ h1 {
 }
 
 #call-action {
-  color: #A1A1AC;
+  color: #a1a1ac;
   font-variant: normal;
   margin: auto;
   width: 100%;
@@ -81,36 +81,36 @@ h1 {
 .nav-contact {
   width: 40%;
   text-align: right;
-  margin: 20px 10px 0px 700px;
+  margin: 20px 10px 0 700px;
 }
 
 .contact {
   display: inline-block;
-  padding: 20px 7px 0px 7px;
+  padding: 20px 7px 0;
 }
 
 #phone {
   text-decoration: none;
   font-family: Source Sans Pro;
-  color: #FFFFFF;
+  color: #fff;
   font-size: 1.07em;
   font-weight: 200;
 }
 
 #phone:hover {
-  color: #5373DA;
+  color: #5373da;
 }
 
 #email {
   text-decoration: none;
   font-family: Source Sans Pro;
-  color: #FFFFFF;
+  color: #fff;
   font-size: 1.07em;
   font-weight: 200;
 }
 
 #email:hover {
-  color: #5373DA;
+  color: #5373da;
 }
 
 span {
@@ -123,9 +123,9 @@ span {
 
 #demo-button {
   width: 150px;
-  background-color: #5373DA;
+  background-color: #5373da;
   border-radius: 50px;
-  padding: 15px 30px 15px 30px;
+  padding: 15px 30px;
   margin: 50px auto;
   text-align: center;
   font-weight: 200;
@@ -143,7 +143,7 @@ span {
   animation-duration: .25s;
   -webkit-animation-timing-function: linear;
   animation-timing-function: linear;
-  color: #FFFFFF;
+  color: #fff;
 }
 
 @-webkit-keyframes pulse {
@@ -163,8 +163,8 @@ span {
 
 #demo-link {
   text-decoration: none;
-  color: #FFFFFF;
-  margin: 0px auto 0px auto;
+  color: #fff;
+  margin: 0 auto;
 }
 
 .marketing-container {
@@ -188,13 +188,13 @@ span {
 }
 
 #center-phone {
-  top: 0px;
-  margin: 0px auto;
+  top: 0;
+  margin: 0 auto;
   width: 330px;
   position: absolute;
   z-index: 3;
-  left: 0px;
-  right: 0px;
+  left: 0;
+  right: 0;
 }
 
 #left-phone {
@@ -215,7 +215,7 @@ span {
 }
 
 #shadow-left {
-  box-shadow: -40px 0px 100px -2px black;
+  box-shadow: -40px 0 100px -2px black;
   left: 28%;
   top: 50px;
   z-index: 2;
@@ -227,7 +227,7 @@ span {
 }
 
 #shadow-right {
-  box-shadow: 40px 0px 100px -2px black;
+  box-shadow: 40px 0 100px -2px black;
   left: 58%;
   top: 50px;
   z-index: 2;
